[project]
name = "ai-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "google-genai>=1.11.0",
    "langchain>=0.3.23",
    "langchain-google-genai>=2.1.2",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.1",
    "tiktoken>=0.9.0",
]

[tool.poetry]
package-mode = false