[project]
name = "ai-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "google-genai>=1.11.0",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-google-genai>=2.1.2",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "pytube>=15.0.0",
    "qdrant-client>=1.13.3",
    "streamlit>=1.44.1",
    "tiktoken>=0.9.0",
    "youtube-transcript-api>=1.0.3",
]

[tool.poetry]
package-mode = false
